# cfc-toolkit

./: .gitignore  CMakeLists.txt  README.md
docs/: notebook.md
include/: force_model.h
src/: force_model.c
